<resources>
    <string name="app_name">MAD_24172012057_service</string>
        <string name="title">MP3 Player</string>
        <string name="song_name">For a Reason</string>
        <string name="poster_desc">Song poster</string>
        <string name="shuffle_button">Shuffle songs</string>
        <string name="previous_button">Play previous song</string>
        <string name="play_button">Play music</string>
        <string name="next_button">Play next song</string>
        <string name="stop_button">Stop music</string>
</resources>