<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/m_top"
            android:id="@+id/title"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="@dimen/m_Horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/Card"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/poster1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/poster_desc"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/Card"
            android:layout_marginTop="@dimen/m_top"
            android:layout_marginHorizontal="@dimen/m_Horizontal"
            app:cardElevation="500dp"
            android:id="@+id/Card2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_Horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/song_name"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/shuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/m_bottom"
                    android:backgroundTint="@color/lightblack"
                    android:src="@drawable/shuffle_40px"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/previous"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/white"
                    android:contentDescription="@string/shuffle_button"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_start"
                    android:layout_marginBottom="@dimen/m_bottom"
                    android:backgroundTint="@color/lightblack"
                    android:src="@drawable/skip_previous_40px"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/Play"
                    app:layout_constraintStart_toEndOf="@+id/shuffle"
                    app:tint="@color/white"
                    android:contentDescription="@string/previous_button"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/Play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_start"
                    android:layout_marginBottom="@dimen/m_bottom"
                    android:backgroundTint="@color/red"
                    android:src="@drawable/play_arrow_40px"
                    app:fabCustomSize="70dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/next"
                    app:layout_constraintStart_toEndOf="@+id/previous"
                    app:tint="@color/white"
                    android:contentDescription="@string/play_button"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_start"
                    android:layout_marginBottom="@dimen/m_bottom"
                    android:backgroundTint="@color/lightblack"
                    android:src="@drawable/skip_next_40px"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/Stop"
                    app:layout_constraintStart_toEndOf="@+id/Play"
                    app:tint="@color/white"
                    android:contentDescription="@string/next_button"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/Stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_start"
                    android:layout_marginBottom="@dimen/m_bottom"
                    android:backgroundTint="@color/lightblack"
                    android:src="@drawable/stop_40px"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/next"
                    app:tint="@color/white"
                    android:contentDescription="@string/stop_button"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>